docs: dịch nội dung sang tiếng Việt/Anh và bổ sung script dịch
- Dịch toàn bộ docs từ tiếng Trung sang tiếng Việt (kèm thuật ngữ tiếng Anh)
- Thêm translate_docs.py để tự động hoá việc dịch
- Thêm CLAUDE.md hướng dẫn làm việc với repo

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>