@@ -1,67 +1,67 @@
 ---
-title: Java 16 新特性概览
-description: 介绍 JDK 16 的语言与平台更新，包含记录类与其他 JEP 改动。
+title: Tổng quan các tính năng mới trong Java 16
+description: Giới thiệu các cập nhật ngôn ngữ và platform của JDK 16, bao gồm record class và các thay đổi JEP khác.
 category: Java
 tag:
-  - Java新特性
+  - Java tính năng mới
 head:
   - - meta
     - name: keywords
-      content: Java 16,JDK16,记录类改进,新 API,JEP,性能
+      content: Java 16,JDK16,record class improvements,new API,JEP,performance
 ---
 
-Java 16 在 2021 年 3 月 16 日正式发布，非长期支持（LTS）版本。
+Java 16 phát hành chính thức ngày 16/3/2021 — phiên bản không hỗ trợ dài hạn (non-LTS).
 
-JDK 16 共有 17 个新特性，这篇文章会挑选其中较为重要的一些新特性进行详细介绍：
+JDK 16 có tổng cộng 17 tính năng mới. Bài này sẽ chọn giới thiệu chi tiết một số tính năng quan trọng hơn:
 
-- [JEP 338: Vector API (Incubator)（向量 API，第一次孵化）](https://openjdk.java.net/jeps/338)
-- [JEP 376: ZGC: Concurrent Thread-Stack Processing（ZGC 并发线程栈处理）](https://openjdk.java.net/jeps/376)
-- [JEP 387: Elastic Metaspace（弹性元空间）](https://openjdk.java.net/jeps/387)
-- [JEP 390: Warnings for Value-Based Classes（基于值的类的警告）](https://openjdk.java.net/jeps/390)
-- [JEP 394: Pattern Matching for instanceof（instanceof 模式匹配，转正）](https://openjdk.java.net/jeps/394)
-- [JEP 395: Records（record 类，转正）](https://openjdk.java.net/jeps/395)
-- [JEP 396: Strongly Encapsulate JDK Internals by Default（默认强封装 JDK 内部元素）](https://openjdk.java.net/jeps/396)
-- [JEP 397: Sealed Classes (Second Preview)（密封类，第二次预览）](https://openjdk.java.net/jeps/397)
+- [JEP 338: Vector API (Incubator)](https://openjdk.java.net/jeps/338)
+- [JEP 376: ZGC: Concurrent Thread-Stack Processing](https://openjdk.java.net/jeps/376)
+- [JEP 387: Elastic Metaspace](https://openjdk.java.net/jeps/387)
+- [JEP 390: Warnings for Value-Based Classes](https://openjdk.java.net/jeps/390)
+- [JEP 394: Pattern Matching for instanceof (Chính thức)](https://openjdk.java.net/jeps/394)
+- [JEP 395: Records (Chính thức)](https://openjdk.java.net/jeps/395)
+- [JEP 396: Strongly Encapsulate JDK Internals by Default](https://openjdk.java.net/jeps/396)
+- [JEP 397: Sealed Classes (Second Preview)](https://openjdk.java.net/jeps/397)
 
-下图是从 JDK 8 到 JDK 25 每个版本的更新带来的新特性数量和更新时间：
+Hình dưới là số lượng tính năng mới và thời gian cập nhật từng phiên bản từ JDK 8 đến JDK 25:
 
-![ JDK 8 到 JDK 25 每个版本的更新带来的新特性数量和更新时间](https://oss.javaguide.cn/github/javaguide/java/new-features/jdk8~jdk24.png)
+![Số lượng tính năng mới và thời gian cập nhật mỗi phiên bản từ JDK 8 đến JDK 25](https://oss.javaguide.cn/github/javaguide/java/new-features/jdk8~jdk24.png)
 
-相关阅读：[OpenJDK Java 16 文档](https://openjdk.java.net/projects/jdk/16/) 。
+Đọc thêm: [OpenJDK Java 16 Documentation](https://openjdk.java.net/projects/jdk/16/).
 
-## JEP 338: Vector API（向量 API，第一次孵化）
+## JEP 338: Vector API (Incubation lần 1)
 
-向量（Vector） API 最初由 [JEP 338](https://openjdk.java.net/jeps/338) 提出，并作为[孵化 API](http://openjdk.java.net/jeps/11)集成到 Java 16 中。第二轮孵化由 [JEP 414](https://openjdk.java.net/jeps/414) 提出并集成到 Java 17 中，第三轮孵化由 [JEP 417](https://openjdk.java.net/jeps/417) 提出并集成到 Java 18 中，第四轮由 [JEP 426](https://openjdk.java.net/jeps/426) 提出并集成到了 Java 19 中。
+Vector API ban đầu được đề xuất qua [JEP 338](https://openjdk.java.net/jeps/338), được tích hợp vào Java 16 như [incubation API](http://openjdk.java.net/jeps/11). Vòng incubation thứ hai qua [JEP 414](https://openjdk.java.net/jeps/414) được tích hợp vào Java 17, vòng ba qua [JEP 417](https://openjdk.java.net/jeps/417) được tích hợp vào Java 18, vòng bốn qua [JEP 426](https://openjdk.java.net/jeps/426) được tích hợp vào Java 19.
 
-该孵化器 API 提供了一个 API 的初始迭代以表达一些向量计算，这些计算在运行时可靠地编译为支持的 CPU 架构上的最佳向量硬件指令，从而获得优于同等标量计算的性能，充分利用单指令多数据（SIMD）技术（大多数现代 CPU 上都可以使用的一种指令）。尽管 HotSpot 支持自动向量化，但是可转换的标量操作集有限且易受代码更改的影响。该 API 将使开发人员能够轻松地用 Java 编写可移植的高性能向量算法。
+Incubator API này cung cấp initial iteration của API để biểu đạt một số vector computation. Các computation này có thể được compile đáng tin cậy tại runtime thành optimal vector hardware instruction trên CPU architecture được hỗ trợ — đạt hiệu năng vượt trội so với scalar computation tương đương, tận dụng đầy đủ kỹ thuật SIMD. Dù HotSpot hỗ trợ auto-vectorization, nhưng tập scalar operation có thể convert còn hạn chế và dễ bị ảnh hưởng bởi code changes. API này sẽ cho phép developer dễ dàng viết portable high-performance vector algorithm bằng Java.
 
-在 [Java 18 新特性概览](./java18.md) 中，我有详细介绍到向量 API，这里就不再做额外的介绍了。
+Trong [Tổng quan tính năng mới Java 18](./java18.md), tôi đã giới thiệu chi tiết về Vector API nên không nhắc lại ở đây.
 
-## JEP 347: Enable C++ 14 Language Features（启用 C++ 14 语言特性）
+## JEP 347: Enable C++ 14 Language Features
 
-Java 16 允许在 JDK 的 C++ 源代码中使用 C++ 14 语言特性，并提供在 HotSpot 代码中可以使用哪些特性的具体指导。
+Java 16 cho phép dùng C++ 14 language feature trong C++ source code của JDK, cung cấp hướng dẫn cụ thể về feature nào có thể dùng trong HotSpot code.
 
-在 Java 15 中，JDK 中 C++ 代码使用的语言特性仅限于 C++98/03 语言标准。它要求更新各种平台编译器的最低可接受版本。
+Trong Java 15, C++ language feature dùng trong JDK bị giới hạn ở C++98/03 language standard. Điều này yêu cầu cập nhật phiên bản compiler tối thiểu có thể chấp nhận cho các platform khác nhau.
 
-## JEP 376: ZGC: Concurrent Thread-Stack Processing（ZGC 并发线程栈处理）
+## JEP 376: ZGC: Concurrent Thread-Stack Processing
 
-Java16 将 ZGC 线程栈处理从安全点转移到一个并发阶段，甚至在大堆上也允许在毫秒内暂停 GC 安全点。消除 ZGC 垃圾收集器中最后一个延迟源可以极大地提高应用程序的性能和效率。
+Java 16 chuyển xử lý ZGC thread stack từ safepoint sang concurrent phase, cho phép GC safepoint pause trong millisecond ngay cả trên heap lớn. Loại bỏ nguồn delay cuối cùng trong ZGC garbage collector có thể cải thiện đáng kể hiệu năng và efficiency của ứng dụng.
 
-## JEP 387: Elastic Metaspace（弹性元空间）
+## JEP 387: Elastic Metaspace
 
-自从引入了 Metaspace 以来，根据反馈，Metaspace 经常占用过多的堆外内存，从而导致内存浪费。弹性元空间这个特性可将未使用的 HotSpot 类元数据（即元空间，metaspace）内存更快速地返回到操作系统，从而减少元空间的占用空间。
+Kể từ khi giới thiệu Metaspace, dựa trên phản hồi, Metaspace thường chiếm quá nhiều off-heap memory dẫn đến lãng phí memory. Tính năng Elastic Metaspace có thể trả lại memory metadata JVM class chưa sử dụng (tức metaspace) cho OS nhanh hơn, giúp giảm footprint của metaspace.
 
-并且，这个提案还简化了元空间的代码以降低维护成本。
+Đề xuất này cũng đơn giản hóa code của metaspace để giảm chi phí maintenance.
 
-## JEP 390: Warnings for Value-Based Classes（基于值的类的警告）
+## JEP 390: Warnings for Value-Based Classes
 
-> 以下介绍摘自：[实操 | 剖析 Java16 新语法特性](https://xie.infoq.cn/article/8304c894c4e38318d38ceb116)，原文写的很不错，推荐阅读。
+> Phần giới thiệu sau trích từ: [Thực tiễn | Phân tích tính năng cú pháp mới Java 16](https://xie.infoq.cn/article/8304c894c4e38318d38ceb116), bài gốc viết rất tốt, khuyến nghị đọc.
 
-早在 Java9 版本时，Java 的设计者们就对 `@Deprecated` 注解进行了一次升级，增加了 `since` 和 `forRemoval` 等 2 个新元素。其中，since 元素用于指定标记了 `@Deprecated` 注解的 API 被弃用时的版本，而 `forRemoval` 则进一步明确了 API 标记 @Deprecated 注解时的语义，如果`forRemoval=true`时，则表示该 API 在未来版本中肯定会被删除，开发人员应该使用新的 API 进行替代，不再容易产生歧义（Java9 之前，标记 @Deprecated 注解的 API，语义上存在多种可能性，比如：存在使用风险、可能在未来存在兼容性错误、可能在未来版本中被删除，以及应该使用更好的替代方案等）。
+Từ Java 9, Java đã nâng cấp annotation `@Deprecated`, bổ sung 2 element mới là `since` và `forRemoval`. Trong đó `since` dùng để chỉ định phiên bản khi API được đánh dấu `@Deprecated` bị deprecated. `forRemoval` làm rõ thêm semantics khi API được đánh dấu `@Deprecated` — nếu `forRemoval=true`, nghĩa là API đó chắc chắn sẽ bị xóa trong phiên bản tương lai và developer nên dùng API mới để thay thế, không còn dễ gây nhầm lẫn (trước Java 9, API được đánh dấu `@Deprecated` có thể có nhiều ý nghĩa khác nhau như có rủi ro khi dùng, có thể có compatibility error trong tương lai, có thể bị xóa trong phiên bản tương lai, hoặc nên dùng giải pháp thay thế tốt hơn).
 
-仔细观察原始类型的包装类（比如：`java.lang.Integer`、`java.lang.Double`），不难发现，其构造函数上都已经标记有`@Deprecated(since="9", forRemoval = true)`注解，这就意味着其构造函数在将来会被删除，不应该在程序中继续使用诸如`new Integer();`这样的编码方式（建议使用`Integer a = 10;`或者`Integer.valueOf()`函数），如果继续使用，编译期将会产生'Integer(int)' is deprecated and marked for removal 告警。并且，值得注意的是，这些包装类型已经被指定为同 `java.util.Optional` 和 `java.time.LocalDateTime` 一样的值类型。
+Quan sát kỹ các wrapper class của kiểu nguyên thủy (như `java.lang.Integer`, `java.lang.Double`), dễ thấy constructor của chúng đều đã được đánh dấu `@Deprecated(since="9", forRemoval = true)` — nghĩa là constructor của chúng sẽ bị xóa trong tương lai và không nên tiếp tục dùng code như `new Integer()` (khuyến nghị dùng `Integer a = 10;` hoặc `Integer.valueOf()`). Nếu tiếp tục dùng sẽ sinh warning lúc compile: `'Integer(int)' is deprecated and marked for removal`. Đáng chú ý là các wrapper type này đã được chỉ định là value type giống như `java.util.Optional` và `java.time.LocalDateTime`.
 
-其次，如果继续在 `synchronized` 同步块中使用值类型，将会在编译期和运行期产生警告，甚至是异常。在此大家需要注意，就算编译期和运行期没有产生警告和异常，也不建议在 `synchronized` 同步块中使用值类型，举个自增的例子。示例 1-5：
+Thêm nữa, nếu tiếp tục dùng value type trong `synchronized` block sẽ sinh warning lúc compile và runtime, thậm chí throw exception. Cần lưu ý rằng dù không có warning và exception lúc compile và runtime, cũng không khuyến nghị dùng value type trong `synchronized` block. Lấy ví dụ về tự tăng:
 
 ```java
 public void inc(Integer count) {
@@ -75,63 +75,61 @@ public void inc(Integer count) {
 }
 ```
 
-当执行上述程序示例时，最终的输出结果一定会与你的期望产生差异，这是许多新人经常犯错的一个点，因为在并发环境下，`Integer` 对象根本无法通过 `synchronized` 来保证线程安全，这是因为每次的`count++`操作，所产生的 `hashcode` 均不同，简而言之，每次加锁都锁在了不同的对象上。因此，如果希望在实际的开发过程中保证其原子性，应该使用 `AtomicInteger`。
+Khi thực thi code trên, kết quả cuối cùng chắc chắn sẽ khác với kỳ vọng. Đây là lỗi phổ biến của nhiều người mới bắt đầu. Vì trong môi trường concurrent, `Integer` object hoàn toàn không thể đảm bảo thread safety thông qua `synchronized` — mỗi thao tác `count++` sinh ra hashcode khác nhau, tức là mỗi lần lock trên một object khác nhau. Do đó nếu muốn đảm bảo atomicity trong phát triển thực tế, nên dùng `AtomicInteger`.
 
-## JEP 392: Packaging Tool（打包工具，转正）
+## JEP 392: Packaging Tool (Chính thức)
 
-在 Java 14 中，JEP 343 引入了打包工具，命令是 `jpackage`。在 Java 15 中，继续孵化，现在在 Java 16 中，终于成为了正式功能。
+Trong Java 14, JEP 343 giới thiệu packaging tool với lệnh `jpackage`. Trong Java 15 tiếp tục ở giai đoạn incubation. Giờ trong Java 16 cuối cùng đã trở thành official feature.
 
-这个打包工具允许打包自包含的 Java 应用程序。它支持原生打包格式，为最终用户提供自然的安装体验，这些格式包括 Windows 上的 msi 和 exe、macOS 上的 pkg 和 dmg，还有 Linux 上的 deb 和 rpm。它还允许在打包时指定启动时参数，并且可以从命令行直接调用，也可以通过 ToolProvider API 以编程方式调用。注意 jpackage 模块名称从 jdk.incubator.jpackage 更改为 jdk.jpackage。这将改善最终用户在安装应用程序时的体验，并简化了“应用商店”模型的部署。
+Packaging tool này cho phép đóng gói ứng dụng Java self-contained. Nó hỗ trợ native packaging format — cung cấp trải nghiệm cài đặt tự nhiên cho end user. Các format bao gồm: msi và exe trên Windows, pkg và dmg trên macOS, deb và rpm trên Linux. Cho phép chỉ định startup parameter lúc đóng gói, và có thể gọi trực tiếp từ command line hoặc theo cách lập trình qua ToolProvider API. Lưu ý tên module jpackage thay đổi từ `jdk.incubator.jpackage` thành `jdk.jpackage`. Điều này cải thiện trải nghiệm cài đặt ứng dụng của end user và đơn giản hóa deployment theo mô hình "app store".
 
-关于这个打包工具的实际使用，可以看这个视频 [Playing with Java 16 jpackage](https://www.youtube.com/watch?v=KahYIVzRIkQ)（需要梯子）。
+## JEP 393: Foreign Memory Access API (Incubation lần 3)
 
-## JEP 393: Foreign Memory Access API（外部内存访问 API，第三次孵化）
+Giới thiệu Foreign Memory Access API để cho phép Java program truy cập foreign memory bên ngoài Java heap một cách an toàn và hiệu quả.
 
-引入外部内存访问 API 以允许 Java 程序安全有效地访问 Java 堆之外的外部内存。
+Java 14 ([JEP 370](https://openjdk.org/jeps/370)) là lần incubation đầu tiên. Java 15 là lần incubation thứ hai ([JEP 383](https://openjdk.org/jeps/383)). Java 16 là lần incubation thứ ba.
 
-Java 14([JEP 370](https://openjdk.org/jeps/370)) 的时候，第一次孵化外部内存访问 API，Java 15 中进行了第二次复活（[JEP 383](https://openjdk.org/jeps/383)），在 Java 16 中进行了第三次孵化。
+Mục đích giới thiệu Foreign Memory Access API:
 
-引入外部内存访问 API 的目的如下：
+- **General**: Một API duy nhất có thể thao tác nhiều loại foreign memory (như native memory, persistent memory, heap memory, v.v.).
+- **Safe**: Bất kể thao tác với loại memory nào, API cũng không được phá vỡ tính an toàn của JVM.
+- **Control**: Tự do chọn cách giải phóng memory (explicit, implicit, v.v.).
+- **Usable**: Nếu cần truy cập foreign memory, API nên là `sun.misc.Unsafe`.
 
-- 通用：单个 API 应该能够对各种外部内存（如本机内存、持久内存、堆内存等）进行操作。
-- 安全：无论操作何种内存，API 都不应该破坏 JVM 的安全性。
-- 控制：可以自由的选择如何释放内存（显式、隐式等）。
-- 可用：如果需要访问外部内存，API 应该是 `sun.misc.Unsafe`.
+## JEP 394: Pattern Matching for instanceof (Chính thức)
 
-## JEP 394: Pattern Matching for instanceof（instanceof 模式匹配，转正）
+| Phiên bản JDK | Loại cập nhật     | JEP                                     | Nội dung cập nhật                                                  |
+| ------------- | ----------------- | --------------------------------------- | ------------------------------------------------------------------ |
+| Java SE 14    | Preview           | [JEP 305](https://openjdk.org/jeps/305) | Lần đầu giới thiệu instanceof pattern matching.                    |
+| Java SE 15    | Second Preview    | [JEP 375](https://openjdk.org/jeps/375) | Không thay đổi so với phiên bản trước, tiếp tục thu thập phản hồi. |
+| Java SE 16    | Permanent Release | [JEP 394](https://openjdk.org/jeps/394) | Pattern variable không còn ngầm là final.                          |
 
-| JDK 版本   | 更新类型          | JEP                                     | 更新内容                                 |
-| ---------- | ----------------- | --------------------------------------- | ---------------------------------------- |
-| Java SE 14 | preview           | [JEP 305](https://openjdk.org/jeps/305) | 首次引入 instanceof 模式匹配。           |
-| Java SE 15 | Second Preview    | [JEP 375](https://openjdk.org/jeps/375) | 相比较上个版本无变化，继续收集更多反馈。 |
-| Java SE 16 | Permanent Release | [JEP 394](https://openjdk.org/jeps/394) | 模式变量不再隐式为 final。               |
-
-从 Java 16 开始，你可以对 `instanceof` 中的变量值进行修改。
+Từ Java 16, có thể modify giá trị của variable trong `instanceof`.
 
 ```java
-// Old code
+// Code cũ
 if (o instanceof String) {
     String s = (String)o;
     ... use s ...
 }
 
-// New code
+// Code mới
 if (o instanceof String s) {
     ... use s ...
 }
 ```
 
-## JEP 395: Records（record 类，转正）
+## JEP 395: Records (Chính thức)
 
-记录类型变更历史：
+Lịch sử thay đổi record type:
 
-| JDK 版本   | 更新类型          | JEP                                          | 更新内容                                                                  |
-| ---------- | ----------------- | -------------------------------------------- | ------------------------------------------------------------------------- |
-| Java SE 14 | Preview           | [JEP 359](https://openjdk.java.net/jeps/359) | 引入 `record` 关键字，`record` 提供一种紧凑的语法来定义类中的不可变数据。 |
-| Java SE 15 | Second Preview    | [JEP 384](https://openjdk.org/jeps/384)      | 支持在局部方法和接口中使用 `record`。                                     |
-| Java SE 16 | Permanent Release | [JEP 395](https://openjdk.org/jeps/395)      | 非静态内部类可以定义非常量的静态成员。                                    |
+| Phiên bản JDK | Loại cập nhật     | JEP                                          | Nội dung cập nhật                                                                                |
+| ------------- | ----------------- | -------------------------------------------- | ------------------------------------------------------------------------------------------------ |
+| Java SE 14    | Preview           | [JEP 359](https://openjdk.java.net/jeps/359) | Giới thiệu keyword `record`, cung cấp cú pháp ngắn gọn để định nghĩa immutable data trong class. |
+| Java SE 15    | Second Preview    | [JEP 384](https://openjdk.org/jeps/384)      | Hỗ trợ dùng `record` trong local method và interface.                                            |
+| Java SE 16    | Permanent Release | [JEP 395](https://openjdk.org/jeps/395)      | Non-static inner class có thể định nghĩa non-constant static member.                             |
 
-从 Java SE 16 开始，非静态内部类可以定义非常量的静态成员。
+Từ Java SE 16, non-static inner class có thể định nghĩa non-constant static member.
 
 ```java
 public class Outer {
@@ -141,32 +139,32 @@ public class Outer {
 }
 ```
 
-> 在 JDK 16 之前，如果写上面这种代码，IDE 会提示你静态字段 age 不能在非静态的内部类中定义，除非它用一个常量表达式初始化。（The field age cannot be declared static in a non-static inner type, unless initialized with a constant expression）
+> Trước JDK 16, nếu viết code như trên, IDE sẽ nhắc: static field `age` không thể khai báo trong non-static inner type, trừ khi được khởi tạo bằng constant expression.
 
-## JEP 396: Strongly Encapsulate JDK Internals by Default（默认强封装 JDK 内部元素）
+## JEP 396: Strongly Encapsulate JDK Internals by Default
 
-此特性会默认强封装 JDK 的所有内部元素，但关键内部 API（例如 `sun.misc.Unsafe`）除外。默认情况下，使用早期版本成功编译的访问 JDK 内部 API 的代码可能不再起作用。鼓励开发人员从使用内部元素迁移到使用标准 API 的方法上，以便他们及其用户都可以无缝升级到将来的 Java 版本。强封装由 JDK 9 的启动器选项–illegal-access 控制，到 JDK 15 默认改为 warning，从 JDK 16 开始默认为 deny。（目前）仍然可以使用单个命令行选项放宽对所有软件包的封装，将来只有使用–add-opens 打开特定的软件包才行。
+Tính năng này mặc định strongly encapsulate tất cả internal element của JDK, ngoại trừ các internal API quan trọng (như `sun.misc.Unsafe`). Theo mặc định, code truy cập JDK internal API được compile thành công với phiên bản trước có thể không hoạt động nữa. Khuyến khích developer migrate từ dùng internal element sang dùng standard API để cả họ lẫn user có thể nâng cấp lên phiên bản Java tương lai một cách seamless. Strong encapsulation được kiểm soát bởi launcher option `--illegal-access` của JDK 9, đến JDK 15 mặc định là warning, từ JDK 16 mặc định là deny. Hiện vẫn có thể dùng single command line option để relaxe encapsulation cho tất cả package. Trong tương lai chỉ có dùng `--add-opens` mới mở được package cụ thể.
 
-## JEP 397: Sealed Classes（密封类，第二次预览）
+## JEP 397: Sealed Classes (Preview lần 2)
 
-密封类由 [JEP 360](https://openjdk.java.net/jeps/360) 提出预览，集成到了 Java 15 中。在 JDK 16 中， 密封类得到了改进（更加严格的引用检查和密封类的继承关系），由 [JEP 397](https://openjdk.java.net/jeps/397) 提出了再次预览。
+Sealed class được đề xuất preview qua [JEP 360](https://openjdk.java.net/jeps/360), được tích hợp vào Java 15. Trong JDK 16, sealed class được cải tiến (kiểm tra reference nghiêm ngặt hơn và quan hệ kế thừa của sealed class), và được đề xuất preview lần nữa qua [JEP 397](https://openjdk.java.net/jeps/397).
 
-在 [Java 14 & 15 新特性概览](./java14-15.md) 中，我有详细介绍到密封类，这里就不再做额外的介绍了。
+Trong [Tổng quan tính năng mới Java 14 & 15](./java14-15.md), tôi đã giới thiệu chi tiết về sealed class nên không nhắc lại ở đây.
 
-## 其他优化与改进
+## Các cải tiến và cải thiện khác
 
-- **JEP 380:Unix-Domain 套接字通道**：Unix-domain 套接字一直是大多数 Unix 平台的一个特性，现在在 Windows 10 和 Windows Server 2019 也提供了支持。此特性为 java.nio.channels 包的套接字通道和服务器套接字通道 API 添加了 Unix-domain（AF_UNIX）套接字支持。它扩展了继承的通道机制以支持 Unix-domain 套接字通道和服务器套接字通道。Unix-domain 套接字用于同一主机上的进程间通信（IPC）。它们在很大程度上类似于 TCP/IP，区别在于套接字是通过文件系统路径名而不是 Internet 协议（IP）地址和端口号寻址的。对于本地进程间通信，Unix-domain 套接字比 TCP/IP 环回连接更安全、更有效
-- **JEP 389:外部链接器 API(孵化)：** 该孵化器 API 提供了静态类型、纯 Java 访问原生代码的特性，该 API 将大大简化绑定原生库的原本复杂且容易出错的过程。Java 1.1 就已通过 Java 原生接口（JNI）支持了原生方法调用，但并不好用。Java 开发人员应该能够为特定任务绑定特定的原生库。它还提供了外来函数支持，而无需任何中间的 JNI 粘合代码。
-- **JEP 357:从 Mercurial 迁移到 Git**：在此之前，OpenJDK 源代码是使用版本管理工具 Mercurial 进行管理，现在迁移到了 Git。
-- **JEP 369:迁移到 GitHub**：和 JEP 357 从 Mercurial 迁移到 Git 的改变一致，在把版本管理迁移到 Git 之后，选择了在 GitHub 上托管 OpenJDK 社区的 Git 仓库。不过只对 JDK 11 以及更高版本 JDK 进行了迁移。
-- **JEP 386:移植 Alpine Linux**：Alpine Linux 是一个独立的、非商业的 Linux 发行版，它十分的小，一个容器需要不超过 8MB 的空间，最小安装到磁盘只需要大约 130MB 存储空间，并且十分的简单，同时兼顾了安全性。此提案将 JDK 移植到了 Apline Linux，由于 Apline Linux 是基于 musl lib 的轻量级 Linux 发行版，因此其他 x64 和 AArch64 架构上使用 musl lib 的 Linux 发行版也适用。
-- **JEP 388:Windows/AArch64 移植**：这些 JEP 的重点不是移植工作本身，而是将它们集成到 JDK 主线存储库中；JEP 386 将 JDK 移植到 Alpine Linux 和其他使用 musl 作为 x64 上主要 C 库的发行版上。此外，JEP 388 将 JDK 移植到 Windows AArch64（ARM64）。
+- **JEP 380: Unix-Domain Socket Channel**: Unix-domain socket là tính năng của hầu hết Unix platform, nay cũng được hỗ trợ trên Windows 10 và Windows Server 2019. Tính năng này bổ sung Unix-domain (AF_UNIX) socket support cho socket channel và server socket channel API trong package `java.nio.channels`. Nó mở rộng inherited channel mechanism để hỗ trợ Unix-domain socket channel và server socket channel. Unix-domain socket dùng cho IPC (inter-process communication) trên cùng host. Về nhiều mặt giống TCP/IP, khác ở chỗ socket được đánh địa chỉ qua file system pathname thay vì IP address và port number. Với local IPC, Unix-domain socket an toàn và hiệu quả hơn TCP/IP loopback connection.
+- **JEP 389: Foreign Linker API (Incubation)**: Incubator API này cung cấp tính năng statically typed, pure-Java access to native code — sẽ đơn giản hóa đáng kể quá trình binding native library vốn phức tạp và dễ lỗi. Java 1.1 đã hỗ trợ native method call qua JNI nhưng không dễ dùng. Java developer nên có thể bind native library cụ thể cho task cụ thể. Nó cũng cung cấp foreign function support mà không cần JNI glue code.
+- **JEP 357: Migrate from Mercurial to Git**: Trước đây OpenJDK source code được quản lý bằng VCS Mercurial, nay đã migrate sang Git.
+- **JEP 369: Migrate to GitHub**: Nhất quán với thay đổi migrate từ Mercurial sang Git trong JEP 357, sau khi migrate VCS sang Git, chọn lưu trữ Git repository của cộng đồng OpenJDK trên GitHub. Tuy nhiên chỉ migrate JDK 11 trở lên.
+- **JEP 386: Alpine Linux Port**: Alpine Linux là bản phân phối Linux độc lập, phi thương mại, rất nhỏ gọn (container dưới 8MB, cài đặt tối thiểu ra disk khoảng 130MB) và đơn giản, đồng thời đảm bảo bảo mật. Đề xuất này port JDK sang Alpine Linux. Vì Alpine Linux là lightweight Linux distribution dựa trên musl lib, các Linux distribution khác dùng musl lib trên x64 và AArch64 cũng phù hợp.
+- **JEP 388: Windows/AArch64 Port**: Trọng tâm của các JEP này không phải bản thân công việc port mà là tích hợp chúng vào JDK mainline repository. JEP 386 port JDK sang Alpine Linux và các distribution dùng musl làm C library chính trên x64. Ngoài ra JEP 388 port JDK sang Windows AArch64 (ARM64).
 
-## 参考文献
+## Tài liệu tham khảo
 
 - [Java Language Changes](https://docs.oracle.com/en/java/javase/16/language/java-language-changes.html)
 - [Consolidated JDK 16 Release Notes](https://www.oracle.com/java/technologies/javase/16all-relnotes.html)
-- [Java 16 正式发布，新特性一一解析](https://www.infoq.cn/article/IAkwhx7i9V7G8zLVEd4L)
-- [实操 | 剖析 Java16 新语法特性](https://xie.infoq.cn/article/8304c894c4e38318d38ceb116)（写的很赞）
+- [Java 16 phát hành chính thức, phân tích từng tính năng mới](https://www.infoq.cn/article/IAkwhx7i9V7G8zLVEd4L)
+- [Thực tiễn | Phân tích tính năng cú pháp mới Java 16](https://xie.infoq.cn/article/8304c894c4e38318d38ceb116) (rất hay)
 
 <!-- @include: @article-footer.snippet.md -->
